tests/application/access-policy/access-policy-istio.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ns-with-istio
  labels:
    istio.io/rev: asm-stable
---
apiVersion: skiperator.kartverket.no/v1alpha1
kind: Application
metadata:
  name: istio-application
  namespace: ns-with-istio
spec:
  image: image
  port: 8080
---
apiVersion: skiperator.kartverket.no/v1alpha1
kind: Application
metadata:
  name: access-policy-to-istio-app
spec:
  image: image
  port: 8080
  accessPolicy:
    outbound:
      rules:
        - application: istio-application
          namespace: ns-with-istio
