tests/application/access-policy/advanced-patch.yaml
apiVersion: skiperator.kartverket.no/v1alpha1
kind: Application
metadata:
  name: access-policy
  namespace: access-policy-ns
spec:
  image: image
  port: 8080
  accessPolicy:
    inbound:
      rules:
        - namespace: other
          application: other
    outbound:
      rules:
        - application: access-policy-two
        - namespace: other
          application: access-policy-other
      external:
        - host: example.com
          ports:
            - name: https
              port: 443
              protocol: HTTPS
        - host: foo.com
---
apiVersion: skiperator.kartverket.no/v1alpha1
kind: Application
metadata:
  name: access-policy-two
spec:
  image: image
  port: 8080
  accessPolicy:
    outbound:
      rules:
        - namespace: other
          application: access-policy-other
