tests/application/access-policy/advanced-error.yaml
apiVersion: skiperator.kartverket.no/v1alpha1
kind: Application
metadata:
  name: access-policy
  namespace: access-policy-ns
spec:
  image: image
  port: 8080
  accessPolicy:
    inbound:
      rules:
        - application: access-policy-other
          namespace: access-policy-other
    outbound:
      external:
        - host: example.com
          ports:
            - name: http
              port: 80
              protocol: HTTP
        - host: foo.com
      rules:
        - application: access-policy-two
          ports:
            - port: 8080
              protocol: TCP
        - application: access-policy-other
          namespace: access-policy-other
          ports:
            - port: 8080
              protocol: TCP
status:
  conditions:
    - type: Ready
      status: "True"
      reason: Reconciled
    - type: InternalRulesValid
      status: "True"
    - type: ExternalRulesValid
      status: "True"
