tests/application/access-policy/bad-policy-error.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: no-app-same-namespace
  labels:
    app.kubernetes.io/managed-by: skiperator
    application.skiperator.no/app: no-app-same-namespace
    application.skiperator.no/app-name: no-app-same-namespace
    application.skiperator.no/app-namespace: access-policy-ns
    skiperator.kartverket.no/controller: application
  annotations:
    argocd.argoproj.io/sync-options: Prune=false
  ownerReferences:
    - apiVersion: skiperator.kartverket.no/v1alpha1
      kind: Application
      name: no-app-same-namespace
      controller: true
      blockOwnerDeletion: true
spec:
  podSelector:
    matchLabels:
      app: no-app-same-namespace
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: doesnt-exist
          namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ($namespace)
  policyTypes:
    - Egress
