tests/application/access-policy/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: access-policy
spec:
  skip: false
  concurrent: true
  skipDelete: false
  namespace: access-policy-ns
  steps:
    - try:
        - apply:
            file: no-policy.yaml
        - assert:
            file: no-policy-assert.yaml
    - try:
        - apply:
            file: advanced.yaml
        - assert:
            file: advanced-assert.yaml
        - error:
            file: advanced-error.yaml
    - try:
        - apply:
            file: advanced-patch.yaml
        - assert:
            file: advanced-patch-assert.yaml
    - try :
        - apply:
            file: bad-policy.yaml
        - assert:
            file: bad-policy-assert.yaml
        - error:
            file: bad-policy-error.yaml
    - try:
        - apply:
            file: access-policy-istio.yaml
        - assert:
            file: access-policy-istio-assert.yaml
